testdata/invalid/orbit_cycle_b.sol
orbit "orbit_cycle_a.sol";
